# rknn_android_3399_pro

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  YoloDetector.cpp  native-lib.cpp  postprocess.cpp  postprocess.h
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/include/: YoloDetector.h  util.h
app/src/main/java/com/example/myarm64rknn/: MainActivity.java  YoloDetector.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
